--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Tr1epLYfF93dzN05xM2BTC3UxOgYJ4CisAH9LrVab0k=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=fastest
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
