--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "type": "project",
     "require": {
         "php": "^7.3",
+        "laravel/framework": "^8.0",
         "bacon/bacon-qr-code": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
