--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Tr1epLYfF93dzN05xM2BTC3UxOgYJ4CisAH9LrVab0k=
 APP_DEBUG=true
-APP_URL=https://foundandscan.co.bd/
+APP_URL=https://foundandscan.com.de/
+ASSET_URL=https://foundandscan.com.de/wp-content/themes/laratheme/public/dist
 
 LOG_CHANNEL=stack
 
