--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "type": "project",
     "require": {
         "php": "^7.3",
-        "laravel/framework": "^8.0",
         "bacon/bacon-qr-code": "^2.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
@@ -20,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.3",
         "meyfa/php-svg": "^0.11.3",
+        "ohseesoftware/laravel-vite-manifest": "*",
         "vlucas/phpdotenv": "*"
     },
     "require-dev": {
