--- a/package.json
+++ b/package.json
@@ -5,23 +5,25 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-basic-ssl": "^1.0.1",
         "autoprefixer": "^10.4.13",
         "axios": "^0.27",
         "framer-motion": "^7.10.2",
         "js-cookie": "^3.0.1",
-        "laravel-vite-plugin": "^0.6.0",
+        "laravel-vite-plugin": "^0.6.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.19",
         "tailwindcss": "^3.2.4",
-        "vite": "^3.0.0"
+        "vite": "^3.2.7",
+        "vite-plugin-mkcert": "^1.16.0"
     },
     "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9",
         "chart.js": "^4.1.1",
         "date-fns": "^2.29.3",
         "faker": "5.5.3",
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.9",
-		"tailwindcss-animate": "^1.0.6"
+        "tailwindcss-animate": "^1.0.6"
     }
 }
