Updated Add Slider To Posts Submenu

--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:Tr1epLYfF93dzN05xM2BTC3UxOgYJ4CisAH9LrVab0k=
 APP_DEBUG=true
-APP_URL=https://foundandscan.com.de/
-ASSET_URL=https://foundandscan.com.de/wp-content/themes/laratheme/public/dist
+APP_URL=https://foundandscan.co.bd/
+ASSET_URL=https://foundandscan.co.bd/wp-content/themes/laratheme/public/dist
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=fastest
+DB_DATABASE=foundandscan
 DB_USERNAME=root
 DB_PASSWORD=
 
